# Telepathy-Butterfly

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure  configure.ac  telepathy-butterfly  wscript
butterfly/: Channel_Interface_Conference.py  Connection_Interface_Mail_Notification.py  Makefile.am  aliasing.py  avatars.py  capabilities.py  channel_manager.py  connection.py  connection_manager.py  contacts.py  handle.py  mail_notification.py  presence.py  simple_presence.py  wscript
butterfly/channel/: Makefile.am  __init__.py  conference.py  contact_list.py  file_transfer.py  filetransfer.py  group.py  im.py  media.py  muc.py  text.py
butterfly/media/: Makefile.am  constants.py  session_handler.py  stream_handler.py
butterfly/util/: Makefile.am
data/: Makefile.am  butterfly.manager  butterfly.service.in  org.freedesktop.Telepathy.ConnectionManager.butterfly.service.in
telepathy_butterfly/: __init__.py  aliasing.py  avatars.py  channel.py  connection.py  connection_manager.py  presence.py
telepathy_butterfly/handler/: __init__.py  address_book.py  client.py  contact.py  invite.py  offline_messages.py
tools/: Makefile.am  gnu_dirs.py
