SUBDIRS = channel media util

butterflydir = $(pythondir)/butterfly
butterfly_PYTHON = \
	aliasing.py \
	capabilities.py \
	Channel_Interface_Conference.py \
	Connection_Interface_Mail_Notification.py \
	connection.py \
	debug.py \
	__init__.py \
	presence.py \
	avatars.py \
	channel_manager.py \
	connection_manager.py \
	contacts.py \
	handle.py \
	mail_notification.py
